tests/ui/async-await/issue-84841.stderr
error[E0277]: the `?` operator can only be applied to values that implement `Try`
  --> $DIR/issue-84841.rs:9:5
   |
LL |     test()?;
   |     ^^^^^^^ the `?` operator cannot be applied to type `impl Future<Output = ()>`
   |
   = help: the trait `Try` is not implemented for `impl Future<Output = ()>`
help: consider `await`ing on the `Future`
   |
LL |     test().await?;
   |           ++++++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
